Fix top nav overflow for screen sizes between 504px and 520px

--- a/public/css/docs/layout.css
+++ b/public/css/docs/layout.css
@@ -1114,7 +1114,7 @@ h2 {
 	}
 }
 
-@media only screen and (min-width: 31.5em) { /* 504px */
+@media only screen and (min-width: 33em) { /* 528px */
 	/*
 	* Once we have enough real estate, show the search icon button.
 	*/
